--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
             
             modalContent.innerHTML = `
                 <div style="text-align: center; margin-bottom: 1.5rem;">
-                    <div style="width: 350px; height: 250px; margin: 0 auto; border-radius: 15px; overflow: hidden; margin-bottom: 1rem; background: ${imageUrl ? `url('${imageUrl}')` : 'linear-gradient(45deg, #667eea, #764ba2)'}; background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; position: relative;">
+                    <div style="width: 100%; max-width: 350px; height: 200px; margin: 0 auto; border-radius: 15px; overflow: hidden; margin-bottom: 1rem; background: ${imageUrl ? `url('${imageUrl}')` : 'linear-gradient(45deg, #667eea, #764ba2)'}; background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; position: relative;">
                         ${!imageUrl ? `<div style="font-size: 4rem; color: white; opacity: 0.3;">${fallbackIcon}</div>` : ''}
                         <div style="position: absolute; bottom: 10px; right: 10px; background: rgba(0, 0, 0, 0.7); color: white; padding: 5px 10px; border-radius: 5px; font-size: 0.8rem; font-weight: bold; backdrop-filter: blur(5px);">3D創想工坊 © 2025</div>
                     </div>
