--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@
                 <div style="text-align: center; margin-bottom: 1.5rem;">
                     <div style="width: 100%; max-width: 350px; height: 200px; margin: 0 auto; border-radius: 15px; overflow: hidden; margin-bottom: 1rem; background: ${imageUrl ? `url('${imageUrl}')` : 'linear-gradient(45deg, #667eea, #764ba2)'}; background-size: cover; background-position: center; display: flex; align-items: center; justify-content: center; position: relative;">
                         ${!imageUrl ? `<div style="font-size: 4rem; color: white; opacity: 0.3;">${fallbackIcon}</div>` : ''}
-                        <div style="position: absolute; bottom: 10px; right: 10px; background: rgba(0, 0, 0, 0.7); color: white; padding: 4px 8px; border-radius: 5px; font-size: 0.7rem; font-weight: bold; backdrop-filter: blur(5px); white-space: nowrap;">3D創想工坊©2025</div>
+                        <div style="position: absolute; bottom: 10px; left: 10px; background: rgba(0, 0, 0, 0.7); color: white; padding: 5px 10px; border-radius: 5px; font-size: 0.8rem; font-weight: bold; backdrop-filter: blur(5px); white-space: nowrap;">3D創想工坊 © 2025</div>
                     </div>
                     <span style="background: linear-gradient(45deg, ${category === 'decorative' ? '#43e97b, #38f9d7' : category === 'functional' ? '#4facfe, #00f2fe' : category === 'creative' ? '#f093fb, #f5576c' : '#fa709a, #fee140'}); color: white; padding: 6px 16px; border-radius: 20px; font-weight: bold; font-size: 0.9rem;">${categoryNames[category]}</span>
                     <h2 style="margin: 1rem 0; color: #333; font-size: 1.8rem;">${title}</h2>
